# filearr

./: .env.example  .gitignore  Dockerfile  README.md  deploy-local.sh  deploy-test.sh  docker-compose.yml  mkdocs.yml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  pages.yml
agent/: README.md  go.mod  go.sum
agent/docs/: install.md  layout.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260706_2bfb3fd1d09a_baseline_schema.py  20260707_a1c3f7e9b204_add_sidecar_of.py  20260707_b7d2e4f6a891_add_hash_policy.py  20260709_c4e8a1b2f307_add_preset_columns.py  20260709_d5f9a3c1e8b0_add_scan_paths.py  20260710_e7c2b9a4d6f1_add_metadata_profiles_custom_fields.py  20260710_f8b3c1d05a29_add_share_prefix_and_rel_path_pattern.py  20260712_a7d4f2c9e6b1_add_thumbnail_manifest.py  20260712_b5e8d3a1c7f4_add_ocr_and_gps_library_flags.py  20260712_c1e3a5b7d9f2_add_item_provenance_and_version_source.py  20260712_d9a1c4e6b8f3_add_alert_tables.py  20260712_e2f4a6c8b0d1_add_saved_searches.py  20260712_f3b8d2a41c5e_alert_events_dedup_unique.py  20260713_a4c8e1f6b2d9_add_last_cron_fired_at.py  20260713_b8f1d3c2a9e4_add_oidc_identity_and_login_state.py  20260713_c3a9f1e2d7b8_add_identity_auth_tables.py  20260713_d7e4c1b9f3a2_add_rbac_groups_grants_ltree.py  20260713_e5f2a8c4b6d3_add_report_definitions.py  20260714_f1a2b3c4d5e6_add_ratelimit_and_security_events.py  20260716_a2b4c6d8e0f2_add_report_exports_schedules.py  20260716_b4d8f0a2c6e4_add_agent_enrollment_tables.py  20260716_c1d2e3f4a5b6_add_agent_commands.py  20260716_d4e6f8a0c2b4_add_agent_share_maps.py  20260716_e7f1a9c3d5b2_add_agent_replication_log.py  20260717_a3f7c1e9b5d4_add_policy_versions.py  20260717_b7e3d1f9a2c4_add_item_last_verified_at.py  20260717_c4f2a6b8d1e3_add_agent_releases.py  20260717_d1e5b9c3a7f2_add_staging_transfers.py  20260717_f8a1c3e5b7d9_add_agent_reconcile.py  20260718_a1f4c7e2b9d3_add_file_taxonomy.py  20260718_c7d9e1f3a5b8_add_agents_capabilities.py  20260718_d2f4b6a8c0e1_staging_dedup_and_activity.py  20260718_d3f8a1c6e2b5_media_type_cutover_taxonomy.py  20260718_e4a7c2f1b9d6_add_item_share_hint.py  20260718_f5c8a2b4d6e0_add_agent_config_groups.py  20260719_b6e2d9f4a713_library_count_pruned_files.py
backend/filearr/: agent_config.py  agentsync.py  audit.py  authx.py  config.py  custom_fields.py  custom_reports.py  db.py  diskguard.py  embed.py  embed_stats.py  errors.py  exif.py  exports.py  file_groups.py  grant_cache.py  hashpolicy.py  hashx.py  jobs_stats.py  ldap_auth.py  localapi_contracts.py  main.py  media_types.py  meili_ops.py  meili_stats.py  models.py  nfo.py  ocr.py  oidc.py  permissions.py  policy.py  presets.py  profiles.py  provenance.py  provisioning.py  quality_score.py  query_sql.py  querydsl.py  queue_stats.py  ratelimit.py  (+24 more)
backend/filearr/alerts/: crypto.py  dispatch.py  ops.py  pipeline.py  render.py  rules.py  signing.py  ssrf.py  webhook_formats.py  windows.py
backend/filearr/api/: __init__.py  agent_commands.py  agent_config_groups.py  agent_inventory.py  agent_policies.py  agent_share_maps.py  agent_staging.py  agent_thumbs.py  agent_updates.py  agents.py  alerts.py  audit.py  auth.py  custom_fields.py  custom_reports.py  digests.py  exports.py  fs.py  item_agent_status.py  items.py  libraries.py  metadata_profiles.py  oidc.py  presets.py  query.py  rbac.py  report_schedules.py  reports.py  saved_searches.py  scan_paths.py  scans.py  search.py  stats.py  system.py  taxonomy.py  transfers.py
backend/filearr/tasks/: agentmon.py  alerts.py  archives.py  associate.py  audiobook.py  diskmon.py  documents.py  embed.py  exif_run.py  extract.py  ffprobe.py  index_sync.py  model3d.py  move.py  ocr_run.py  reconcile.py  reports.py  scan.py  scoped_scan.py  thumbs.py
backend/scripts/: bench_embed.py  init_db.py
backend/tests/: conftest.py  test_agent_commands.py  test_agent_config_groups_w6.py  test_agent_inventory_w6d3.py  test_agent_mtls_auth_p5t6.py  test_agent_share_maps.py  test_agent_staging.py  test_agent_thumbs.py  test_agent_updates_p5t7.py  test_agentmon_p8t11.py  test_agents_p5t1.py  test_agents_p5t2_ca_ott.py  test_agentsync_scaffold.py  test_alert_crypto.py  test_alert_drivers.py  test_alert_migration.py  test_alerts_api.py  test_alerts_ops.py  test_alerts_pipeline.py  test_alerts_scaffold.py  test_archives_p3.py  test_associate_integration.py  test_attempts_fix12.py  test_audit_retrievals_p10t9.py  test_auth_p6.py  test_body_text_p3.py  test_browse_tree_uit12.py  test_cachedir_walk_t4.py  test_cf_projection_p4.py  test_custom_fields_p4.py  test_custom_reports_p11.py  test_diskguard_fix11.py  test_dsl_help_examples.py  test_duplicates_timeline_p3.py  test_embed_p3.py  test_ensure_index_fix2.py  test_errors_t11.py  test_exif_run_p3.py  test_extension_groups_t3.py  test_extract_clear_stale.py  (+88 more)
docker/caddy/: Caddyfile.acme  Caddyfile.internal  Dockerfile
docs/: future-roadmap.md  migrations.md  phase-1-scanner-tasks.md
docs-site/: agents.md  data-collection.md  index.md  operations.md  security.md  setup.md
docs-site/deployment/: docker-compose.md  index.md  proxmox.md  unraid.md  upgrades.md
docs-site/reference/: api.md  configuration.md  development.md  file-extension-groups.md
docs/ops/: agents.md  alerting.md  auth.md  backup.md  disk-space.md  scan-scheduling.md  tls.md
docs/research/: agent-inventory-presets.md  hash-quickhash-false-duplicates.md  permissions-enumeration-audit.md  phase-10-agent-file-transfer.md  phase-10-t4-transport-spike.md  phase-11-reporting-exports.md  phase-12-thumbnails.md  phase-2-indexing-controls.md  phase-3-search-findability.md  phase-4-data-model-extensions.md  phase-5-distributed-agents.md  phase-5-t2a-stepca-spike.md  phase-8-alerting.md  (+5 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
proxmox/: deploy-proxmox.sh
scripts/: backup.sh  smoke.sh
shared/: querydsl-vectors.json  schedule-vectors.json
unraid/: README.md  filearr-meilisearch.xml  filearr-postgres.xml  filearr-worker.xml  filearr.xml
(+285 files in other folders)
